--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container-fluid p-5 bg-secondary text-white text-center">
-  <h1>Hola mundo</h1>
+  <h1>Proyecto Django</h1>
 </div>
 <div class="container mt-3">
   <a href="/lista_presidentes"> Ver listado de presidentes</a>
