--- a/farmacia/templates/farmacia/base.html
+++ b/farmacia/templates/farmacia/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {% block title %}
-      <title>President project</title>
+      <title>Farmacia</title>
     {% endblock %}
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,8 +11,10 @@
 
   </head>
   <body>
+    {% include "farmacia/navegacion.html" %}
     {% block content %}
       <!-- default content text (typically empty) -->
     {% endblock %}
+    {% include "farmacia/footer.html" %}
   </body>
 </html>
